# zed-pdf-lsp

./: Cargo.toml  README.md  test.sh
.github/workflows/: ci.yml  release.yml
.kiro/specs/zed-pdf-lsp/: .config.kiro  design.md  requirements.md  tasks.md
src/: document_registry.rs  lib.rs  main.rs  message_handler.rs  pdf_converter.rs  server.rs
